--- a/ImageProcessing.ipynb
+++ b/ImageProcessing.ipynb
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "# Approach 1\n",
+    "# Image 1\n",
     "id = r.search(r'\\d{2}-\\w{3}-\\d{4}',text)\n",
     "print(id)\n",
     "\n",
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "#Approach 2\n",
+    "#Image 2\n",
     "image1 = Image.open('F:/1. Data Analysis & Research/6. Internshala/2. Internship assignments/1. Fyle/0. DataSet_Receipts/0a0ebd53.jpeg')\n",
     "text1 = image_to_string(image1,lang='eng') # languages can be changed based on requirement, by default it will be english\n",
     "\n",
