--- a/ImageProcessing.ipynb
+++ b/ImageProcessing.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "image = Image.open('F:/1. Data Analysis & Research/6. Internshala/2. Internship assignments/1. Fyle/0. DataSet_Receipts/0e0dd005.jpeg')\n",
+    "image = Image.open('FilePath/0e0dd005.jpeg')\n",
     "text = image_to_string(image,lang='eng') # languages can be changed based on requirement, by default it will be english\n",
     "# type(text) --> above converts text to strings\n",
     "\n",
@@ -170,7 +170,7 @@
    ],
    "source": [
     "#Image 2\n",
-    "image1 = Image.open('F:/1. Data Analysis & Research/6. Internshala/2. Internship assignments/1. Fyle/0. DataSet_Receipts/0a0ebd53.jpeg')\n",
+    "image1 = Image.open('FilePath/0a0ebd53.jpeg')\n",
     "text1 = image_to_string(image1,lang='eng') # languages can be changed based on requirement, by default it will be english\n",
     "\n",
     "text1 = text1.replace(\" \",\"\")\n",
